--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^4.0.3",
+    "mongodb": "^4.3.1",
     "next": "latest",
+    "next-auth": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
